--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="Flet-style">
         <a href="main2.Amida.html"><img id="AmidaHead" src="AmidaHead.jpg" alt="Amida"></a>
-        <a href="main2.Amida.html"><figure><figcaption class="center"><strong>Фасадне комерційне приміщення під клініку <br> з шикарним ремонтом 186 кв. м</strong></figcaption></figure></a>
+        <a href="main2.Amida.html"><figure><figcaption class="center"><strong>Фасадне комерційне приміщення під клініку/аптеку <br> з сучаним ремонтом 186 кв. м</strong></figcaption></figure></a>
      </div>
 
     <br><br><br><br><br>
@@ -37,14 +37,14 @@
 
      <div class="Flet-style">
         <a href="main5.Flowers.html"><img id="Flower" src="Flowers1.jpg" alt="Flet.Center"></a>
-        <a href="main5.Flowers.html"><figure><figcaption class="center"><strong>Приміщення 43кв з вітражним входом з вітражним входом</strong></figcaption></figure></a>
+        <a href="main5.Flowers.html"><figure><figcaption class="center"><strong>Приміщення 43кв з вітражним входом</strong></figcaption></figure></a>
      </div>
 
      <br><br><br><br><br>
 
      <div class="Flet-style">
         <a href="main6.Flet.html"><img class="Flet" src="Build.jpeg" alt="Flet.Center"></a>
-        <a href="main6.Flet.html"><figure><figcaption class="center"><strong>Здається 2х кімнатна видова квартира 75кв</strong></figcaption></figure></a>
+        <a href="main6.Flet.html"><figure><figcaption class="center"><strong>2х кімнатна видова квартира 75кв,<br> з дизайнерським ремонтом</strong></figcaption></figure></a>
      </div>
 
      <br><br><br><br><br><br><br>
