--- a/main6.Flet.html
+++ b/main6.Flet.html
@@ -63,7 +63,7 @@
 
       <br><br><br><br>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2533.3125401850443!2d30.489309315672987!3d50.58414397949402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d35934146585%3A0xb416a4030d59960!2z0L3QsNCxLiDRg9C7LiwgNtCQLCDQktGL0YjQs9C-0YDQvtC0LCDQmtC40LXQstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgMDczMDE!5e0!3m2!1sru!2sde!4v1654274910593!5m2!1sru!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.5223439467013!2d30.585660215268735!3d50.44999716341164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf18d2c5b473%3A0x1c10da693007dba6!2z0YPQuy4g0J3QuNC60L7Qu9GM0YHQutC-LdCh0LvQvtCx0L7QtNGB0LrQsNGPLCAzLCDQmtC40LXQsiwg0KPQutGA0LDQuNC90LAsIDAyMDAy!5e0!3m2!1sru!2sde!4v1654641992585!5m2!1sru!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
     
     <br><br><br><br><br><br><br>
 
