--- a/main4.Office.html
+++ b/main4.Office.html
@@ -15,6 +15,7 @@
           <div class="swiper-slide"><img class="photo-slide" src="Office2.jpg" alt="Office2"></div>
           <div class="swiper-slide"><img class="photo-slide" src="Office3.jpg" alt="Office3"></div>
           <div class="swiper-slide"><img class="photo-slide" src="Office4.jpg" alt="Office4"></div>
+          <div class="swiper-slide"><img class="photo-slide" src="Office.Plan.jpg" alt="Office.Plan"></div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
