--- a/main5.Flowers.html
+++ b/main5.Flowers.html
@@ -19,6 +19,7 @@
           <div class="swiper-slide"><img class="photo-slide" src="Flowers4.jpg" alt="Office4"></div>
           <div class="swiper-slide"><img class="photo-slide" src="Flowers5.jpg" alt="Office2"></div>
           <div class="swiper-slide"><img class="photo-slide" src="Flowers6.jpg" alt="Office3"></div>
+          <div class="swiper-slide"><img class="photo-slide" src="Flowers.Plan.jpg" alt="Flowers.Plan"></div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
