--- a/main2.Amida.html
+++ b/main2.Amida.html
@@ -34,6 +34,7 @@
         <div class="swiper-slide"><img class="photo-slide" src="Amida15.jpg" alt="Office"></div>
         <div class="swiper-slide"><img class="photo-slide" src="Plan1.jpg" alt="Plan1"></div>
         <div class="swiper-slide"><img class="photo-slide" src="Plan2.jpg" alt="Plan2"></div>
+        <div class="swiper-slide"><img class="photo-slide" src="Amida.Plan.jpg" alt="Plan2"></div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
