--- a/main2.Amida.html
+++ b/main2.Amida.html
@@ -71,7 +71,7 @@
       
       <p><strong><em class="color-text">Шукаєте привабливе приміщення для Вашого бізнесу у м. Вишгород- запрошуємо на перегляд !</em></strong></p>
       
-      <p>Ціна 350грн за кв. м.</p>
+      <p><strong><em class="color-text">Ціна: За договоро</em></strong></p>
 
       <strong><em class="color-text">Контактна інформація:</em></strong> 099 27 09 094 
       <p>Микитенко Ілля Олександрович</p>
