--- a/main3.Shop.html
+++ b/main3.Shop.html
@@ -52,7 +52,7 @@
         Фасадна реклама з підсвіткою робить приміщення більш помітним та привабливим . 
         
         Запрошуємо на перегляд ! 
-        <p><strong><em class="color-text"><ins>Ціна 400 грн за кв. м.</ins></em></strong></p>
+        <p><strong><em class="color-text"><ins>Ціна за договором</ins></em></strong></p>
         <strong><em class="color-text"><ins>Контактна інформація:</ins></em></strong> 099 270 90 94 
         <p>Микитенко Ілля Олександрович</p>
 
