--- a/main4.Office.html
+++ b/main4.Office.html
@@ -48,7 +48,7 @@
 
         <p><ins>Шукаєте привабливе приміщення для Вашого бізнесу у м. Вишгород - запрошуємо на перегляд !</ins></p>
 
-        <p><strong><em class="color-text">Ціна 350грн за кв. м.</em></strong></p>
+        <p><strong><em class="color-text"><ins>Ціна за договором</ins></em></strong></p>
         
         <strong><em class="color-text">Контактна інформація:</em></strong> 099 270 90 94 
         
