--- a/main5.Flowers.html
+++ b/main5.Flowers.html
@@ -52,7 +52,7 @@
 
         Шукаєте привабливе приміщення для Вашого бізнесу у м. Вишгород- запрошуємо на перегляд ! 
 
-        <p><strong><em class="color-text"><ins>Ціна 400 грн за кв. м.</ins></em></strong></p>
+        <p><strong><em class="color-text"><ins>Ціна за договором</ins></em></strong></p>
         
         <strong><em class="color-text"><ins>Контактна інформація:</ins></em></strong> 099 270 90 94 
         
