--- a/main6.Flet.html
+++ b/main6.Flet.html
@@ -56,6 +56,8 @@
         <strong><em class="color-text">Близькість об'єктів соціально-культурного призначення:</em></strong> шкіл, дитячих садочків, центрів раннього розвитку дітей, фітнес-клубів, 
         кінотеатрів, відділень банків, супермаркетів зробить зручним та комфортним проживання сімей з дітьми. 
         <strong><em class="color-text">До метро Лівобережна 10 хв</em></strong></p>
+  
+        <p><strong><em class="color-text"><ins>Ціна за договором</ins></em></strong></p>
         
         <p><strong><em class="color-text"> Контактна інформація:</em></strong>: 099 270 90 94</p>
         <p>Микитенко Ілля Олександрович</p>
