--- a/main2.Amida.html
+++ b/main2.Amida.html
@@ -13,37 +13,11 @@
 
   <body>
 
-    <br><br><br><br>
-    <!-- Swiper -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img class="photo-slide" src="Amida1.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida2.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida3.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida4.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida5.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida6.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida7.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida8.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida9.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida10.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida11.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida12.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida13.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida14.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida15.jpg" alt="Office"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Plan1.jpg" alt="Plan1"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Plan2.jpg" alt="Plan2"></div>
-        <div class="swiper-slide"><img class="photo-slide" src="Amida.Plan.jpg" alt="Plan2"></div>
-      </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div>
+     <div id="amida_space">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/uJo8Sux5rV0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Tu5N4xaNckU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
-    <br><br><br><br>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/M54tHD7wXA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
     <br><br><br><br><br><br>
   
     <p> 
