--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="Flet-style">
-        <a href="main2.Amida.html"><img id="AmidaHead" src="AmidaHead.jpg" alt="Amida"></a>
+        <a href="main2.Amida.html"><img id="AmidaHead" src="mainAmida.jpg" alt="Amida"></a>
         <a href="main2.Amida.html"><figure><figcaption class="center"><strong>Фасадне комерційне приміщення під клініку/аптеку <br> з сучаним ремонтом 186 кв. м</strong></figcaption></figure></a>
      </div>
 
