--- a/main2.Amida.html
+++ b/main2.Amida.html
@@ -38,7 +38,7 @@
       лічильник на воду (2 шт.) та на електроенергію (2шт.), лічильник на опалення (2 шт.), камери відеоспостереження ( на вулиці та у приміщенні) , ролети на вікнах та на дверях. 
       
       Приміщення з двома санвузлами та кімнатою для персоналу. У санвузлах наявні рукомийник та бойлер. 
-      <p><strong><em class="color-text">Потужність приміщення складає 35 кВт.</em></strong></p>
+      <p><strong><em class="color-text">Потужність приміщення складає 25 і 17 кВт.</em></strong></p>
       Ідеально підходить під клініку, ресторан, магазин. 
       <p>Є можливість роз’єднати приміщення на 2 окремі офіси ( 63 та 120 кв. м.).</p>
       Наявність фасадної реклами з підсвіткою робить приміщення більш привабливим та помітним . 
