--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="Flet-style">
         <a href="main2.Amida.html"><img id="AmidaHead" src="mainAmida.jpg" alt="Amida"></a>
-        <a href="main2.Amida.html"><figure><figcaption class="center"><strong>Фасадне комерційне приміщення під клініку/аптеку <br> з сучаним ремонтом 186 кв. м</strong></figcaption></figure></a>
+        <a href="main2.Amida.html"><figure><figcaption class="center"><strong>Фасадне комерційне приміщення, <br> з сучаним ремонтом 120 та 63 кв. м, <br> Можна обєднати</strong></figcaption></figure></a>
      </div>
 
     <br><br><br><br><br>
